5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1679_1101.log
== TEST (2019-04-25 17:26:55) 
-- CODE:
#Entrada do consumo de energia:
consumo=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C)")
inst=inst.upper()
print(inst)
-- OUTPUT:
I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:27:25) 
-- CODE:
#Entrada do consumo de energia:
consumo=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()
print(inst)
-- OUTPUT:
I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:32:51) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()
print(inst)

#Calculo do valor devido
if(con <0) or (con == str) or (inst != R) or (inst != C)or (inst != I):
	print("Entradas: ", con, " kWh e tipo ", inst)
	print("Dados invalidos")
-- OUTPUT:
I
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:33:27) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()
print(inst)

#Calculo do valor devido
if(con < 0) or (con == str) or (inst != "R") or (inst != "C")or (inst != "I"):
	print("Entradas: ", con, " kWh e tipo ", inst)
	print("Dados invalidos")
-- OUTPUT:
I
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:34:10) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()
print(inst)

#Calculo do valor devido
if(con < 0) or (inst != "R") or (inst != "C")or (inst != "I"):
	print("Entradas: ", con, " kWh e tipo ", inst)
	print("Dados invalidos")
-- OUTPUT:
I
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:34:49) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()
print(inst)

#Calculo do valor devido
if(con < 0) or (inst != "R") or (inst != "C")or (inst != "I"):
	print("Entradas: ", con, " kWh e tipo ", inst)
	print("Dados invalidos")
-- OUTPUT:
I
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:35:10) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()
print(inst)

#Calculo do valor devido
if(con < 0) or (inst != "R") or (inst != "C")or (inst != "I"):
	print("Entradas: ", con, " kWh e tipo ", inst)
	print("Dados invalidos")
-- OUTPUT:
I
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:36:11) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()
print(inst)

#Calculo do valor devido
if(con < 0) or (inst != "R") or (inst != "C")or (inst != "I"):
	print("Entradas: ", con, " kWh e tipo ", inst)
	print("Dados invalidos")
else:
	print("ok")
-- OUTPUT:
I
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:39:18) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con < 0) or (inst != "R") or (inst != "C") or (inst != "I"):
	print("Entradas: ", con, " kWh e tipo ", inst)
	print("Dados invalidos")
else:
	print("ok")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:39:54) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con < 0) or (inst != "R") or (inst != "C") or (inst != "I"):
	print("Entradas: ", con, " kWh e tipo ", inst)
	print("Dados invalidos")
else:
	print("ok")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:41:06) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con < 0): 
	print("Entradas: ", con, " kWh)
	print("Dados invalidos")
else:
	print("ok")
	
	#or (inst != "R") or (inst != "C") or (inst != "I"):
			 #e tipo ", inst
-- ERROR:
File "XXXX", line 8
    print("Entradas: ", con, " kWh)
                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:41:16) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con < 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	#or (inst != "R") or (inst != "C") or (inst != "I"):
			 #e tipo ", inst
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:42:40) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if((con < 0) or (inst != "R") or (inst != "C") or (inst != "I"): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	
			 
-- ERROR:
File "XXXX", line 7
    if((con < 0) or (inst != "R") or (inst != "C") or (inst != "I"): 
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:42:53) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if((con < 0) or (inst != "R") or (inst != "C") or (inst != "I")): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:43:26) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con < 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:45:34) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con < 0) or (inst != "R") or (inst != "I") or (inst != "C"): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:56:41) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con < 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:57:01) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con < 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:00:04) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()
# or (inst != "R") or (inst != "I") or (inst != "C")
#Calculo do valor devido
if(con < 0) and (inst != "R") and (inst != "I") and (inst != "C"): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	
			 
-- OUTPUT:
ok
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:00:22) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()
# or (inst != "R") or (inst != "I") or (inst != "C")
#Calculo do valor devido
if(con < 0) and (inst != "R") and (inst != "I") and (inst != "C"): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	
			 
-- OUTPUT:
ok
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:03:59) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con < 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:04:19) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con < 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:04:37) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con < 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
else:
	print("ok")
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:15:43) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst == "R") and (com <= 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0,44)
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:16:08) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst == "R") and (com <= 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0,44)
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:16:34) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0,44)
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:16:58) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.44)
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:18:12) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.44)
elif(inst == "R") and (con > 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.65)	
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:18:33) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.44)
elif(inst == "R") and (con > 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.65)	
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:19:01) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.44)
elif(inst == "R") and (con > 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.65)	
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:19:20) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.44)
elif(inst == "R") and (con > 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.65)	
	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:29:49) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas: ", con, " kWh")
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.44)
elif(inst == "R") and (con > 500):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.65)	
elif(inst == "C") and (con <= 1000):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.55)	
elif(inst == "C") and (con > 1000):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.60)	
elif(inst == "I") and (con <= 5000):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.55)	
elif(inst == "I") and (con > 5000):
	print("Entradas: ", con, " kWh")
	print("Valor total: R$", con*0.60)	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:33:02) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh e tipo", inst)
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.44)
elif(inst == "R") and (con > 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.65)	
elif(inst == "C") and (con <= 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "C") and (con > 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
elif(inst == "I") and (con <= 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "I") and (con > 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:33:35) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh e tipo", inst)
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.44)
elif(inst == "R") and (con > 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.65)	
elif(inst == "C") and (con <= 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "C") and (con > 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
elif(inst == "I") and (con <= 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "I") and (con > 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:33:45) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh e tipo", inst)
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.44)
elif(inst == "R") and (con > 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.65)	
elif(inst == "C") and (con <= 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "C") and (con > 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
elif(inst == "I") and (con <= 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "I") and (con > 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:33:54) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh e tipo", inst)
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.44)
elif(inst == "R") and (con > 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.65)	
elif(inst == "C") and (con <= 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "C") and (con > 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
elif(inst == "I") and (con <= 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "I") and (con > 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:34:05) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh e tipo", inst)
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.44)
elif(inst == "R") and (con > 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.65)	
elif(inst == "C") and (con <= 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "C") and (con > 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
elif(inst == "I") and (con <= 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "I") and (con > 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 19:34:59) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh e tipo", inst)
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.44)
elif(inst == "R") and (con > 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.65)	
elif(inst == "C") and (con <= 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "C") and (con > 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
elif(inst == "I") and (con <= 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.55)	
elif(inst == "I") and (con > 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", con*0.60)	
	
			 
-- EXECUTION TIME:
0.206525
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:36:42) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh e tipo", inst)
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.44, 2))
elif(inst == "R") and (con > 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.65, 2))	
elif(inst == "C") and (con <= 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.55, 2))	
elif(inst == "C") and (con > 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.60, 2))	
elif(inst == "I") and (con <= 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.55, 2))	
elif(inst == "I") and (con > 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.60, 2))	
	
			 
-- OUTPUT:
Entradas:  -56.0  kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 19:37:05) 
-- CODE:
#Entrada do consumo de energia:
con=float(input("Qual o consumo de energia? "))
inst=input("Indique o tipo de instalacao: residencia (R), industria (I) ou comercio (C): ")
inst=inst.upper()

#Calculo do valor devido
if(con <= 0): 
	print("Entradas: ", con, " kWh e tipo", inst)
	print("Dados invalidos")
elif(inst != "R") and (inst != "I") and (inst != "C"):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Dados invalidos")
elif(inst == "R") and (con <= 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.44, 2))
elif(inst == "R") and (con > 500):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.65, 2))	
elif(inst == "C") and (con <= 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.55, 2))	
elif(inst == "C") and (con > 1000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.60, 2))	
elif(inst == "I") and (con <= 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.55, 2))	
elif(inst == "I") and (con > 5000):
	print("Entradas:", con,"kWh e tipo", inst)
	print("Valor total: R$", round(con*0.60, 2))	
	
			 
-- EXECUTION TIME:
0.178403
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
